feat: updating pixi configuration to support torch

--- a/gpu-intro/pixi.toml
+++ b/gpu-intro/pixi.toml
@@ -9,3 +9,6 @@ version = "0.1.0"
 
 [dependencies]
 mojo = ">=0.25.7.0.dev2025110818,<0.26"
+numpy = ">=2.3.5,<3"
+max = ">=25.7.0.dev2025111305,<26"
+scipy = ">=1.16.3,<2"
